--- a/myApp/templates/decode.html
+++ b/myApp/templates/decode.html
@@ -16,6 +16,16 @@
     <div class="mb-3">
         <div class="d-flex align-items-center highlight-toolbar ps-3 pe-2 py-1 border-0">
             <div class="d-flex ms-auto">
+                {% if current_user.is_authenticated %}
+                    {% if decoded_message|length < 1 %}
+                        {% set link_class = "btn btn-outline-success btn-sm disabled-link" %}
+                    {% else %}
+                        {% set link_class = "btn btn-outline-success btn-sm active-link" %}
+                    {% endif %}
+                    <a id="emailLink" class="{{ link_class }}" Title="Send Email" role="button" href="mailto:{{ current_user.email }}?subject=Your decoded message.&body={{ decoded_message.replace('\n', '%0D%0A') }}" target="_blank" rel="noopener noreferrer">
+                        <i class="bi bi-send" aria-hidden="true"></i>
+                    </a>
+                {% endif %}
                 <button id="copyButton" aria-label="Copy to clipboard" data-bs-toggle="tooltip" data-bs-placement="top" title="Copy to clipboard" class="btn btn-outline-warning btn-sm clipboard-button" type="button" onclick="copyToClipboard('decodedMessage')">
                     <i class="bi bi-clipboard" aria-hidden="true"></i>
                 </button>
