--- a/myApp/static/css/style.css
+++ b/myApp/static/css/style.css
@@ -39,7 +39,7 @@
     padding-right: 10px;
     padding-left: 10px;
 }
-.clipboard-button {
+.msg-button {
     box-shadow: 1px 1px rgba(0,0,0,.08), 0 0 1px rgba(0,0,0,.05);
       transition: .1s transform cubic-bezier(.155,1.105,.295,1.12),.1s box-shadow,.1s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
 }
@@ -49,16 +49,12 @@
     border: 1px solid;
     border-color: rgba(108,196,143);
     margin-right: 10%;
-    box-shadow: 1px 1px rgba(0,0,0,.08), 0 0 1px rgba(0,0,0,.05);
-      transition: .1s transform cubic-bezier(.155,1.105,.295,1.12),.1s box-shadow,.1s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
     display: inline-block;
 
 }
 .active-link {
     color: green;
     margin-right: 10%;
-    box-shadow: 1px 1px rgba(0,0,0,.08), 0 0 1px rgba(0,0,0,.05);
-      transition: .1s transform cubic-bezier(.155,1.105,.295,1.12),.1s box-shadow,.1s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
     display: inline-block;
 }
 .msg-btn:hover {
