--- a/myApp/templates/base.html
+++ b/myApp/templates/base.html
@@ -47,7 +47,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <div class="container-fluid">
-                <a class="navbar-brand abs" href="{{ url_for('routes.home') }}">Adam's Message Encoding System</a>
+                <a class="navbar-brand abs" href="{{ url_for('routes.home') }}">Adam's Message Encoding System test</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
