Move user functions into the UserModel class. Update text on welcome and about pages.

--- a/myApp/templates/about.html
+++ b/myApp/templates/about.html
@@ -9,7 +9,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-github"></i> GitHub</h5>
-                <p class="card-text">Git repository for the Flask Application.</p>
+                <p class="card-text">Application Git repository.</p>
                 <a target="_blank" href="https://github.com/adam-bartholomew/encode-message" class="stretched-link"></a>
             </div>
         </div>
