--- a/myApp/templates/home.html
+++ b/myApp/templates/home.html
@@ -6,7 +6,7 @@
     <div class="col-md-8 offset-md-2 div-title-center">
         <h1>{% block title %} Welcome! {% endblock %}</h1>
         <h5>Please use the links in the navigation bar at the top of the page to select a destination.</h5>
-        <p>This application was built to encode and decode an English message around the number of syllables in a word. A more detailed design document can be found in the GitHub repository linked in the "About" section.</p>
+        <p>This application was built to encode and decode an English message around the number of syllables in a word. A more detailed design document can be found in the GitHub repository found on the <a href="{{ url_for('routes.about') }}">About</a> page.</p>
     </div>
 </div>
 <div id="banner-bottom" class="fixed-bottom">
