--- a/myApp/templates/base.html
+++ b/myApp/templates/base.html
@@ -42,6 +42,10 @@
         <!--Favicon-->
         <link rel="shortcut icon" type="image/ico" href="{{ url_for('static', filename='image/favicon.ico') }}">
 
+        <!--Google SSO-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
         <title>{% block title %} {% endblock %}</title>
     </head>
     <body>
