--- a/myApp/templates/login.html
+++ b/myApp/templates/login.html
@@ -13,4 +13,18 @@
 		<button name="loginSubmit" class="btn btn-primary" Value="Login" type="submit" form="loginForm" title="Login">Login</button>
 	</div>
 </form>
+<div class="row sso-div">
+	<div class="col-sm-2">
+		<a href="{{ url_for('routes.oauth2_authorize', provider='google') }}" class="btn btn-outline-danger sso-link">
+				<img id="google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png" alt="Google" class="sso-link-img">
+				Login with Google
+		</a>
+	</div>
+	<div class="col-sm-2">
+		<a href="{{ url_for('routes.oauth2_authorize', provider='google') }}" class="btn btn-outline-danger sso-link">
+				<img id="google3" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png" alt="Google" class="sso-link-img">
+				Login with Google
+		</a>
+	</div>
+</div>
 {% endblock %}
