--- a/myApp/templates/about.html
+++ b/myApp/templates/about.html
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-sm-6 div-card-about">
-        <div class="card">
+        <div class="card card-about">
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-github"></i> GitHub</h5>
                 <p class="card-text">Application Git repository.</p>
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="col-sm-6 div-card-about">
-        <div class="card">
+        <div class="card card-about">
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-linkedin"></i> LinkedIn</h5>
                 <p class="card-text">Adam's LinkedIn profile.</p>
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="col-sm-6 div-card-about">
-        <div class="card">
+        <div class="card card-about">
             <div class="card-body">
                 <h5 class="card-title"><img src="{{ url_for('static', filename='image/favicon.ico') }}" width="25" alt="Hieroglyph"/> The Noun Project</h5>
                 <p class="card-text">"Hieroglyph" icon by Jajang Nurrahman from <a href="https://thenounproject.com/browse/icons/term/hieroglyph/" target="_blank">Noun Project</a></p>
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="col-sm-6 div-card-about">
-        <div class="card">
+        <div class="card card-about">
             <div class="card-body">
                 <h5 class="card-title"><i class="bi bi-file-earmark-play-fill"></i> Vercel</h5>
                 <p class="card-text">Application hosted via Vercel</p>
