Update login page design layout. Bold the form and submit buttons. Add to styling.

--- a/myApp/templates/decode.html
+++ b/myApp/templates/decode.html
@@ -9,8 +9,8 @@
         <textarea id="inputMessage" name="inputMessage" placeholder="Please enter your encoded message here." class="form-control" Title="This should contain a date on the first line with text following on each subsequent line.">{{ request.form['inputMessage'] }}</textarea>
     </div>
     <div class="mb-3">
-        <button name="decodeSubmit" id="decodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary" form="decodeForm" Title="Submit message for decoding" onClick="loading()">Submit</button>
-        <button name="decodeClear" id="decodeClear" value="Clear" type="submit" class="btn btn-outline-danger" form="decodeForm" onClick="clearDecodeForm()" Title="Clear all page fields">Clear</button>
+        <button name="decodeSubmit" id="decodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary bold-outline-btn" form="decodeForm" Title="Submit message for decoding" onClick="loading()">Submit</button>
+        <button name="decodeClear" id="decodeClear" value="Clear" type="submit" class="btn btn-outline-danger bold-outline-btn" form="decodeForm" onClick="clearDecodeForm()" Title="Clear all page fields">Clear</button>
     </div>
     <hr class="mt-1 mb-1"/>
     <div class="mb-3">
