--- a/myApp/templates/encode.html
+++ b/myApp/templates/encode.html
@@ -12,8 +12,8 @@
         <input type="number" id="encodeOffset" name="encodeOffset" class="form-control" max="25" min="0" placeholder="0" form="encodeForm" title="Select a number between 0 and 25 | Default is 0">
     </div>
     <div class="mb-3">
-        <button name="encodeSubmit" id="encodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary" form="encodeForm" Title="Submit message for encoding" onClick="loading()">Submit</button>
-        <button name="encodeClear" id="encodeClear" value="Clear" type="submit" class="btn btn-outline-danger" form="encodeForm" onClick="clearEncodeForm()" Title="Clear all page fields">Clear</button>
+        <button name="encodeSubmit" id="encodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary bold-outline-btn" form="encodeForm" Title="Submit message for encoding" onClick="loading()">Submit</button>
+        <button name="encodeClear" id="encodeClear" value="Clear" type="submit" class="btn btn-outline-danger bold-outline-btn" form="encodeForm" onClick="clearEncodeForm()" Title="Clear all page fields">Clear</button>
     </div>
     <hr class="mt-1 mb-1"/>
     <div class="mb-3">
