--- a/myApp/templates/user_profile.html
+++ b/myApp/templates/user_profile.html
@@ -60,9 +60,9 @@
                 </div>
             </div>
         </div>
-        <br/>
+        <hr class="mt-3 mb-3"/>
         <div class="mb-3">
-            <button name="updateProfile" class="btn btn-primary" Value="Update Profile" type="submit" form="updateProfileForm" title="Update Profile">Update Profile</button>
+            <button name="updateProfile" class="btn btn-primary bold-btn" Value="Update Profile" type="submit" form="updateProfileForm" title="Update Profile">Update Profile</button>
         </div>
     </form>
 </div>
