--- a/myApp/static/css/style.css
+++ b/myApp/static/css/style.css
@@ -1,21 +1,12 @@
-@media (min-width: 768px) {
-.navbar-brand.abs {
-        position: absolute;
-        width: auto;
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
-    }
-.div-title-center {
-    text-align: center;
-    }
+a {
+    text-decoration: none;
 }
 .card-about {
     border-radius: 4px;
     background: #fff;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
       transition: .1s transform cubic-bezier(.155,1.105,.295,1.12),.1s box-shadow,.1s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-  cursor: pointer;
+    cursor: pointer;
 }
 .card-about:hover {
     transform: scale(1.02);
@@ -41,7 +32,7 @@
 }
 .msg-button {
     box-shadow: 1px 1px rgba(0,0,0,.08), 0 0 1px rgba(0,0,0,.05);
-      transition: .1s transform cubic-bezier(.155,1.105,.295,1.12),.1s box-shadow,.1s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+        transition: .1s transform cubic-bezier(.155,1.105,.295,1.12),.1s box-shadow,.1s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
 }
 .disabled-link {
     pointer-events: none;
@@ -50,7 +41,6 @@
     border-color: rgba(108,196,143);
     margin-right: 10%;
     display: inline-block;
-
 }
 .active-link {
     color: green;
@@ -103,14 +93,80 @@
 }
 .sso-link {
     display: flex;
+    height: 38px;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     text-decoration: none;
-    float: left;
+    color: #49545C;
+    margin-bottom: 15px;
+    border: 1px solid transparent;
+    border-radius: 20px;
+    background: #fff;
+    box-shadow: 0 2px 2px rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.2), 0 1px 5px 0 rgba(0,0,0,0.12);
+        transition: .1s transform cubic-bezier(.155,1.105,.295,1.12),.1s box-shadow,.1s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+}
+.sso-link:hover {
+    background-color: rgb(238,238,238);
 }
 .sso-link-img {
     display: inline-block;
     width: 20px;
     height: 20px;
-    margin-right: 10px;
+    margin-right: 10%;
+    margin-left: 5%;
+}
+.bold-btn {
+    font-weight: bold;
+}
+.bold-outline-btn {
+    font-weight: bold;
+    border: 2px solid;
+}
+.form-input {
+    margin-bottom: 1rem !important;
+    margin-top: 1rem !important;
+}
+#login-container {
+    padding-right: 5%;
+    padding-left: 5%;
+}
+#login-submit-btn {
+    width: 100%;
+    font-weight: bold;
+}
+#login-title {
+    text-align:center;
+    padding-bottom: 10px;
+}
+#create-an-account {
+    text-decoration: none;
+}
+@media (min-width: 768px) {
+    .navbar-brand.abs {
+        position: absolute;
+        width: auto;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+    }
+    .div-title-center {
+        text-align: center;
+    }
+}
+@media (min-width: 992px) {
+    #login-left {
+        border-right: 1px solid #ccc;
+    }
+    #login-submit-btn {
+        width: 65%;
+    }
+    #login-container {
+        padding-right: 15%;
+        padding-left: 15%;
+    }
+}
+@media (max-width: 176px) {
+    .bold-outline-btn {
+        margin-bottom: 5px;
+    }
 }
