--- a/myApp/templates/sign_up.html
+++ b/myApp/templates/sign_up.html
@@ -2,15 +2,15 @@
 {% set active_page = "register" %}
 
 {% block content %}
-<h1>{% block title %}Create an account{% endblock %}</h1>
+<h1>{% block title %}Register{% endblock %}</h1>
 <form id="signUpForm" action="#" method="post" class="form-general">
     <div class="mb-3">
-        <input type="text" name="username" required="required" Title="Username is case sensitive" placeholder="Username" maxlength="25" class="form-control"/>
-        <br/>
-        <input type="password" name="password" required="required" Title="Password must be 8 - 25 characters in length" placeholder="Password" minlength="8" maxlength="25" class="form-control"/>
+        <input type="text" name="username" required="required" Title="Username is case sensitive" placeholder="Username" maxlength="25" class="form-control form-input"/>
+        <input type="password" name="password" required="required" Title="Password must be 8 - 25 characters in length" placeholder="Password" minlength="8" maxlength="25" class="form-control form-input"/>
     </div>
+    <hr class="mt-3 mb-3"/>
     <div class="mb-3">
-        <button name="registerSubmit" class="btn btn-primary" Value="Sign Up" type="submit" form="signUpForm" title="Register an account">Sign Up</button>
+        <button name="registerSubmit" class="btn btn-primary bold-btn" Value="Sign Up" type="submit" form="signUpForm" title="Register an account">Sign Up</button>
     </div>
 </form>
 {% endblock %}
