Change how encoding and decoding is performed to avoid the delay in response causing 504 errors in vercel.

--- a/myApp/static/css/style.css
+++ b/myApp/static/css/style.css
@@ -141,6 +141,15 @@ a {
 #create-an-account {
     text-decoration: none;
 }
+#encodedMessage {
+    height: 28rem;
+}
+#decodedMessage {
+    height: 28rem;
+}
+#decodeInputMessage {
+    height: 8.25rem;
+}
 @media (min-width: 768px) {
     .navbar-brand.abs {
         position: absolute;
