--- a/myApp/templates/login.html
+++ b/myApp/templates/login.html
@@ -9,6 +9,8 @@
 			<form action="\login" id="loginForm" method="post" class="form-general">
 				<div class="mb-3">
 					<input type="text" name="username" required="required" Title="This field is required" placeholder="Username" class="form-control form-input"/>
+				</div>
+				<div class="mb-3">
 					<input type="password" name="password" required="required" Title="This field is required" placeholder="Password" class="form-control form-input"/>
 				</div>
 				<div class="mb-3 text-center">
