--- a/myApp/templates/home.html
+++ b/myApp/templates/home.html
@@ -15,7 +15,7 @@
             <i class="bi bi-arrow-down-up"></i>
         </button>
     </div>
-    <div id="collapseFooter" class="row footer-general collapse show">
+    <div id="collapseFooter" class="row footer-general collapse">
         <hr class="mt-1 mb-3"/>
         <div class="col-md-8 offset-md-2 div-title-center">
             <p>This app is a work in progress, apologies for any errors or issues encountered. Please stop by the <a target="_blank" href="https://github.com/adam-bartholomew/encode-message">GitHub repo</a> to create an issue if you'd like.</p>
