--- a/myApp/static/css/style.css
+++ b/myApp/static/css/style.css
@@ -130,7 +130,7 @@ a {
     padding-right: 5%;
     padding-left: 5%;
 }
-#login-submit-btn {
+.login-reg-submit-btn {
     width: 100%;
     font-weight: bold;
 }
@@ -138,7 +138,10 @@ a {
     text-align:center;
     padding-bottom: 10px;
 }
-#create-an-account {
+#create-an-account-link {
+    text-decoration: none;
+}
+#login-link {
     text-decoration: none;
 }
 #encodedMessage {
@@ -166,7 +169,7 @@ a {
     #login-left {
         border-right: 1px solid #ccc;
     }
-    #login-submit-btn {
+    .login-reg-submit-btn {
         width: 65%;
     }
     #login-container {
