--- a/myApp/templates/base.html
+++ b/myApp/templates/base.html
@@ -129,7 +129,7 @@
                     <i class="bi bi-arrow-down-up"></i>
                 </button>
             </div>
-            <div id="collapseFooter" class="row footer-general collapse show">
+            <div id="collapseFooter" class="row footer-general collapse">
                 <hr class="mt-1 mb-3"/>
                 <div class="col-md-8 offset-md-2 div-title-center">
                     <p>Please note that if the encoding/decoding takes longer than 10 seconds you will get a "504: GATEWAY_TIMEOUT" error saying "The Serverless Function has crashed". If that happens, navigate back to the app and try a smaller message. This is a limitation of Vercel's hobby account.</p>
@@ -145,6 +145,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
         <!-- Optional JavaScript -->
+        <script src="{{ url_for('static', filename='js/encodeMessage.js') }}"></script>
         <script>
             $(".nav-link").on("click", function(){
                $(".nav-link.active").removeClass("active");
