--- a/myApp/templates/login.html
+++ b/myApp/templates/login.html
@@ -8,20 +8,20 @@
 		<div id="login-left" class="col-lg-6">
 			<form action="\login" id="loginForm" method="post" class="form-general">
 				<div class="mb-3">
-					<input type="text" name="username" required="required" Title="This field is required" placeholder="Username" class="form-control form-input"/>
+					<input id="loginUsername" type="text" name="username" required="required" Title="This field is required" placeholder="Username" class="form-control form-input"/>
 				</div>
 				<div class="mb-3">
-					<input type="password" name="password" required="required" Title="This field is required" placeholder="Password" class="form-control form-input"/>
+					<input id="loginPassword" type="password" name="password" required="required" Title="This field is required" placeholder="Password" class="form-control form-input"/>
 				</div>
 				<div class="mb-3 text-center">
-					<button id="login-submit-btn" name="loginSubmit" class="btn btn-primary" Value="Login" type="submit" form="loginForm" title="Login">Login</button>
+					<button id="login-submit-btn" name="loginSubmit" class="btn btn-primary login-reg-submit-btn" Value="Login" onclick="validateLogin()" type="submit" form="loginForm" title="Login">Login</button>
 				</div>
 			</form>
 			<span>New to the site?</span>
-			<a id="create-an-account" href="{{ url_for('routes.register') }}">Create an account</a>
+			<a id="create-an-account-link" href="{{ url_for('routes.register') }}">Create an account</a>
 		</div>
 		<div class="col-lg-6">
-			<a href="{{ url_for('routes.oauth2_authorize', provider='google') }}" class="sso-link form-input" Title="Login with Google">
+			<a onclick="loadingGeneral()" href="{{ url_for('routes.oauth2_authorize', provider='google') }}" class="sso-link form-input" Title="Login with Google">
 					<img id="google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png" aria-label="Google" aria-hidden="true" alt="Google" class="sso-link-img">
 					Login with Google
 			</a>
