--- a/myApp/templates/base.html
+++ b/myApp/templates/base.html
@@ -125,14 +125,14 @@
         {% if active_page == 'encode' or active_page == 'decode' %}
         <div id="banner-bottom" class="fixed-bottom">
             <div class="div-collapse">
-                <button Title="Hide/Show Info" type="button" class="btn btn-sm" data-toggle="collapse" data-target="#collapseFooter" aria-expanded="true" aria-controls="collapseExample">
+                <button id="collapseBtn" Title="Hide/Show Info" type="button" class="btn btn-sm collapse-btn" data-toggle="collapse" data-target="#collapseFooter" aria-expanded="true" aria-controls="collapseExample">
                     <i class="bi bi-arrow-down-up"></i>
                 </button>
             </div>
             <div id="collapseFooter" class="row footer-general collapse">
                 <hr class="mt-1 mb-3"/>
                 <div class="col-md-8 offset-md-2 div-title-center">
-                    <p>Please note that if the encoding/decoding takes longer than 10 seconds you will get a "504: GATEWAY_TIMEOUT" error saying "The Serverless Function has crashed". If that happens, navigate back to the app and try a smaller message. This is a limitation of Vercel's hobby account.</p>
+                    <p class="collapsable-msg">Please note that if the {{ active_page }} takes longer than 10 seconds you will get a "504: GATEWAY_TIMEOUT" error saying "The Serverless Function has crashed". If that happens, navigate back to the app and try a smaller message. This is a limitation of Vercel's hobby account.</p>
                 </div>
             </div>
         </div>
