--- a/myApp/templates/home.html
+++ b/myApp/templates/home.html
@@ -11,14 +11,14 @@
 </div>
 <div id="banner-bottom" class="fixed-bottom">
     <div class="div-collapse">
-        <button Title="Hide/Show Info" type="button" class="btn btn-sm" data-toggle="collapse" data-target="#collapseFooter" aria-expanded="true" aria-controls="collapseExample">
+        <button Title="Hide/Show Info" type="button" class="btn btn-sm collapse-btn" data-toggle="collapse" data-target="#collapseFooter" aria-expanded="true" aria-controls="collapseExample">
             <i class="bi bi-arrow-down-up"></i>
         </button>
     </div>
     <div id="collapseFooter" class="row footer-general collapse">
         <hr class="mt-1 mb-3"/>
         <div class="col-md-8 offset-md-2 div-title-center">
-            <p>This app is a work in progress, apologies for any errors or issues encountered. Please stop by the <a target="_blank" href="https://github.com/adam-bartholomew/encode-message">GitHub repo</a> to create an issue if you'd like.</p>
+            <p class="collapsable-msg">This app is a work in progress, apologies for any errors or issues encountered. Please stop by the <a target="_blank" href="https://github.com/adam-bartholomew/encode-message">GitHub repo</a> to create an issue if you'd like.</p>
         </div>
     </div>
 </div>
