remove spaces from title blocks, may not be necessary.

--- a/myApp/templates/index.html
+++ b/myApp/templates/index.html
@@ -2,7 +2,7 @@
 {% set active_page = "index" %}
 
 {% block content %}
-<h1>{% block title %} Landing page {% endblock %}</h1>
+<h1>{% block title %}Landing Page{% endblock %}</h1>
 </nav>
 {% if current_user.is_authenticated %}
 <h1>You are logged in</h1>
