--- a/myApp/templates/about.html
+++ b/myApp/templates/about.html
@@ -2,7 +2,7 @@
 {% set active_page = "about" %}
 
 {% block content %}
-<h1>{% block title %} Website Information: {% endblock %}</h1>
+<h1>{% block title %} Website Information{% endblock %}:</h1>
 
 <div class="row">
     <div class="col-sm-6 div-card-about">
