--- a/myApp/templates/login.html
+++ b/myApp/templates/login.html
@@ -25,6 +25,10 @@
 					<img id="google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png" aria-label="Google" aria-hidden="true" alt="Google" class="sso-link-img">
 					Login with Google
 			</a>
+			<a onclick="loadingGeneral()" href="{{ url_for('routes.oauth2_authorize', provider='github') }}" class="sso-link form-input" Title="Login with GitHub">
+					<img id="github" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png" aria-label="Github" aria-hidden="true" alt="Github" class="sso-link-img">
+					Login with GitHub
+			</a>
 		</div>
 	</div>
 </div>
