--- a/myApp/templates/login.html
+++ b/myApp/templates/login.html
@@ -21,14 +21,23 @@
 			<a id="create-an-account-link" href="{{ url_for('routes.register') }}">Create an account</a>
 		</div>
 		<div class="col-lg-6">
-			<a onclick="loadingGeneral()" href="{{ url_for('routes.oauth2_authorize', provider='google') }}" class="sso-link form-input" Title="Login with Google">
-					<img id="google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png" aria-label="Google" aria-hidden="true" alt="Google" class="sso-link-img">
+			<a id="google-sso" onclick="loadingGeneral()" href="{{ url_for('routes.oauth2_authorize', provider='google') }}" class="sso-link form-input" Title="Login with Google">
+				<img id="google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png" aria-label="Google Login" aria-hidden="true" alt="Google Login" class="sso-link-img">
 					Login with Google
 			</a>
-			<a onclick="loadingGeneral()" href="{{ url_for('routes.oauth2_authorize', provider='github') }}" class="sso-link form-input" Title="Login with GitHub">
-					<img id="github" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png" aria-label="Github" aria-hidden="true" alt="Github" class="sso-link-img">
+			<a id="github-sso" onclick="loadingGeneral()" href="{{ url_for('routes.oauth2_authorize', provider='github') }}" class="sso-link form-input" Title="Login with GitHub">
+				<img id="github" src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" aria-label="Github Login" aria-hidden="true" alt="Github Login" class="sso-link-img">
 					Login with GitHub
 			</a>
+			<a id="twitter-sso" onclick="loadingGeneral()" href="{{ url_for('routes.oauth2_authorize', provider='twitter') }}" class="sso-link form-input" Title="Login with Twitter (X)">
+				<img id="twitter" src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Twitter_X.png" aria-label="Twitter Login" aria-hidden="true" alt="Twitter Login" class="sso-link-img">
+					Login with Twitter
+			</a>
+			<a id="twitch-sso" onclick="loadingGeneral()" href="{{ url_for('routes.oauth2_authorize', provider='twitch') }}" class="sso-link form-input" Title="Login with Twitch">
+				<img id="twitch" src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Twitch_Glitch_Logo_Purple.svg" aria-label="Twitter Login" aria-hidden="true" alt="Twitch Login" class="sso-link-img">
+					Login with Twitch
+			</a>
+
 		</div>
 	</div>
 </div>
