--- a/myApp/templates/user_profile.html
+++ b/myApp/templates/user_profile.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %}
 {% set active_page = "profile" %}
+{% set sso_providers = [
+	('google', 0),
+	('github', 0),
+	('twitch', 0)
+] -%}
 
 {% block content %}
-
 <h1>{% block title %}Update Profile{% endblock %}</h1>
 <div class="div-profile-info">
     <div class="row">
@@ -15,7 +19,17 @@
             <p>Last Modified By: {{ user.last_modified_userid }}</p>
         </div>
         <div class="col-md-4">
-            <p>Linked Accounts: {{ user.sso }}</p>
+            <p>Connected Accounts:</p>
+            <div style="form-check">
+                {% for provider, status in sso_providers %}
+                    {% if user.sso and provider.capitalize() in user.sso.split(',') %}
+                        <input class="form-check-input" type="checkbox" id="{{ provider }}-toggle" checked disabled>
+                    {% else %}
+                        <input class="form-check-input" type="checkbox" id="{{ provider }}-toggle" disabled>
+                    {% endif %}
+                    <label class="form-check-label form-check-inline" for="{{ provider }}-toggle">{{ provider.capitalize() }}</label>
+                {% endfor %}
+            </div>
         </div>
     </div>
     <form id="updateProfileForm" method="post" class="form-general">
