--- a/myApp/templates/user_profile.html
+++ b/myApp/templates/user_profile.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% set active_page = "profile" %}
 {% set sso_providers = [
-	('google', 0),
-	('github', 0),
-	('twitch', 0)
+	('google', 'https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png'),
+	('github', 'https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg'),
+	('twitch', 'https://upload.wikimedia.org/wikipedia/commons/d/d3/Twitch_Glitch_Logo_Purple.svg')
 ] -%}
 
 {% block content %}
@@ -18,19 +18,17 @@
             <p>Last Modified: {{ user.get_formatted_date(user.last_modified_datetime) }}</p>
             <p>Last Modified By: {{ user.last_modified_userid }}</p>
         </div>
-        <div class="col-md-4">
-            <p>Connected Accounts:</p>
-            <div style="form-check">
-                {% for provider, status in sso_providers %}
-                    {% if user.sso and provider.capitalize() in user.sso.split(',') %}
-                        <input class="form-check-input" type="checkbox" id="{{ provider }}-toggle" checked disabled>
-                    {% else %}
-                        <input class="form-check-input" type="checkbox" id="{{ provider }}-toggle" disabled>
+        {% if user.sso %}
+            <div class="col-md-4">
+                <p>Connected Accounts:
+                {% for provider, img in sso_providers %}
+                    {% if provider.capitalize() in user.sso.split(',') %}
+                        <img id="{{ provider }}-conn" src="{{ img }}" aria-label="{{ provider }} Image" aria-hidden="true" alt="{{ provider }} Image" class="sso-img">
                     {% endif %}
-                    <label class="form-check-label form-check-inline" for="{{ provider }}-toggle">{{ provider.capitalize() }}</label>
                 {% endfor %}
+                </p>
             </div>
-        </div>
+        {% endif %}
     </div>
     <form id="updateProfileForm" method="post" class="form-general">
         <div class="row">
