--- a/myApp/templates/user_saves.html
+++ b/myApp/templates/user_saves.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 
-<h1>{% block title %}Saved Messages{% endblock %}</h1>
-
+<h1 style="text-align:center;">{% block title %}Saved Messages{% endblock %}</h1>
+<p>{{ user.id }}</p>
 {% endblock %}
