--- a/myApp/static/css/style.css
+++ b/myApp/static/css/style.css
@@ -30,26 +30,25 @@ a {
     padding-right: 10px;
     padding-left: 10px;
 }
-.msg-button {
-    box-shadow: 1px 1px rgba(0,0,0,.08), 0 0 1px rgba(0,0,0,.05);
-        transition: .1s transform cubic-bezier(.155,1.105,.295,1.12),.1s box-shadow,.1s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-}
-.disabled-link {
+.disabled-link-send {
     pointer-events: none;
     color: rgba(108,196,143);
     border: 1px solid;
     border-color: rgba(108,196,143);
-    margin-right: 10%;
+    margin-right: 0.5rem;
     display: inline-block;
 }
-.active-link {
+.active-link-send {
     color: green;
-    margin-right: 10%;
+    margin-right: 0.5rem;
     display: inline-block;
 }
 .msg-btn:hover {
     transform: scale(1.01);
     box-shadow: 0 2px 2px rgba(0,0,0,.12), 0 2px 2px rgba(0,0,0,.06);
+}
+.form-button {
+    margin-right: 0.5rem;
 }
 .loader {
     position: absolute;
