--- a/myApp/templates/base.html
+++ b/myApp/templates/base.html
@@ -7,6 +7,7 @@
 ] -%}
 {% set nav_bar_right_auth = [
     ('profile', 'profile', 'Profile', 'User Profile'),
+    ('saves', 'saves', 'Saved Messages', 'Your saved messages'),
     ('/logout', 'logout', 'Logout', 'Logout')
 ] -%}
 {% set nav_bar_right_anon = [
@@ -22,7 +23,8 @@
     ('register', 'bi-person-plus'),
     ('profile', 'bi-person-badge'),
     ('404', 'bi-patch-question'),
-    ('401', 'bi-patch-question')
+    ('401', 'bi-patch-question'),
+    ('saves', 'bi-star')
 ] -%}
 {% set active_page = active_page|default('index') -%}
 <html lang="en">
