--- a/myApp/templates/decode.html
+++ b/myApp/templates/decode.html
@@ -9,8 +9,8 @@
         <textarea id="decodeInputMessage" name="decodeInputMessage" placeholder="Please enter your encoded message here." class="form-control" Title="This should contain a date on the first line with text following on each subsequent line.">{{ request.form['inputMessage'] }}</textarea>
     </div>
     <div class="mb-3">
-        <button name="decodeSubmit" id="decodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary bold-outline-btn" form="decodeForm" Title="Submit message for decoding" onClick="loadingMessage()">Submit</button>
-        <button name="decodeClear" id="decodeClear" value="Clear" type="submit" class="btn btn-outline-danger bold-outline-btn" form="decodeForm" onClick="clearDecodeForm()" Title="Clear all page fields">Clear</button>
+        <button name="decodeSubmit" id="decodeSubmit" value="Submit" type="submit" class="btn btn-outline-primary bold-outline-btn form-button" form="decodeForm" Title="Submit message for decoding" onClick="loadingMessage()">Submit</button>
+        <button name="decodeClear" id="decodeClear" value="Clear" type="submit" class="btn btn-outline-danger bold-outline-btn form-button" form="decodeForm" onClick="clearDecodeForm()" Title="Clear all page fields">Clear</button>
     </div>
     <hr class="mt-1 mb-1"/>
     <div class="mb-3">
@@ -18,11 +18,11 @@
             <div class="d-flex ms-auto">
                 {% if current_user.is_authenticated %}
                     {% if decoded_message|length < 1 %}
-                        {% set link_class = "btn btn-outline-success btn-sm msg-btn disabled-link" %}
+                        {% set link_class = "btn btn-outline-success btn-sm msg-btn disabled-link-send" %}
                     {% else %}
-                        {% set link_class = "btn btn-outline-success btn-sm msg-btn active-link" %}
+                        {% set link_class = "btn btn-outline-success btn-sm msg-btn active-link-send" %}
                     {% endif %}
-                    <a id="emailLink" class="{{ link_class }}" Title="Send Email" role="button" href="mailto:{{ current_user.email }}?subject=Your decoded message.&body={{ decoded_message.replace('\n', '%0D%0A') }}" target="_blank" rel="noopener noreferrer">
+                    <a id="emailLink" class="{{ link_class }}" Title="Send as Email" role="button" href="mailto:{{ current_user.email }}?subject=Your decoded message.&body={{ decoded_message.replace('\n', '%0D%0A') }}" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-send" aria-hidden="true"></i>
                     </a>
                 {% endif %}
