--- a/myApp/static/css/style.css
+++ b/myApp/static/css/style.css
@@ -1,6 +1,31 @@
 a {
     text-decoration: none;
 }
+.saved-msg-td-th {
+    border: 1px solid #BBBBBB;
+    text-align: left;
+    padding: 8px;
+    white-space: pre;
+}
+.saved-msg-tr:nth-child(even) {
+    background: #DDDDDD;
+    border: 1px solid #FF0000;
+}
+.saved-msg-tbl {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+.saved-action-btn:hover {
+    /*white-space: pre;*/
+    /*width: 50%;*/
+    /*height: 10px;*/
+    transform: scale(1.01);
+    box-shadow: 0 2px 2px rgba(0,0,0,.12), 0 2px 2px rgba(0,0,0,.06);
+}
+.saved-action-btn {
+    margin-right: 0.5em;
+}
 .card-about {
     border-radius: 4px;
     background: #fff;
