--- a/myApp/templates/saved_messages.html
+++ b/myApp/templates/saved_messages.html
@@ -4,5 +4,25 @@
 {% block content %}
 
 <h1 style="text-align:center;">{% block title %}Saved Messages{% endblock %}</h1>
-<p>{{ user.id }}</p>
+{% if saved_messages %}
+    <table id="savedMessageTable" class="saved-msg-tbl">
+        <caption>All encoded messages saved by {{ user.username }}</caption>
+        <tr class="saved-msg-tr">
+            <th class="saved-msg-td-th">Number</th>
+            <th class="saved-msg-td-th">Encoded Message</th>
+            <th class="saved-msg-td-th">Saved Datetime</th>
+            <th class="saved-msg-td-th">Actions</th>
+        </tr>
+        {% for savedMessage in saved_messages %}
+            <tr class="saved-msg-tr">
+                <td class="saved-msg-td-th">{{ loop.index }}</td>
+                <td id="savedText{{ loop.index }}" class="saved-msg-td-th">{{ savedMessage['encoded_text'] }}</td>
+                <td class="saved-msg-td-th">{{ user.get_formatted_date(savedMessage['saved_datetime']) }}</td>
+                <td class="saved-msg-td-th"><button id="copyButton{{ loop.index }}" aria-label="Copy encoded message to clipboard" data-bs-toggle="tooltip" data-bs-placement="top" title="Copy encoded message to clipboard" class="btn btn-warning btn-sm saved-action-btn" type="button" onclick="copyToClipboard('savedText{{ loop.index }}');"><i class="bi bi-clipboard" aria-hidden="true"></i></button><button id="removeSavedButton{{ loop.index }}" aria-label="Remove Saved Message" data-bs-toggle="tooltip" data-bs-placement="top" title="Remove Saved Message" class="btn btn-danger btn-sm saved-action-btn" type="button" onclick="deleteSavedMessage('savedText{{ loop.index }}')"><i class="bi bi-trash" aria-hidden="true"></i></button></td>
+            </tr>
+        {% endfor %}
+    </table>
+{% else %}
+    <h4>You have no saved messages</h4>
+{% endif %}
 {% endblock %}
