Incorporate flask_migrate functionality to use SQLAlchemy properly as an ORM.

--- a/myApp/templates/base.html
+++ b/myApp/templates/base.html
@@ -24,7 +24,7 @@
     ('profile', 'bi-person-badge'),
     ('404', 'bi-patch-question'),
     ('401', 'bi-patch-question'),
-    ('saved_messages', 'bi-star')
+    ('saved_messages', 'bi-heart')
 ] -%}
 {% set active_page = active_page|default('index') -%}
 <html lang="en">
